# Muchachota_P

./: .gitignore  CMakeLists.txt  partitions.csv  publish.ps1  sdkconfig  sdkconfig.bak_preOTA  sdkconfig.defaults  version.json
components/esp_hosted/host/port/esp/freertos/src/: port_esp_hosted_host_init.c
components/ota_http/: CMakeLists.txt  ota_http.c  ota_http.h
main/: CMakeLists.txt  idf_component.yml  main.c  main.h
main/ui/: .eez-project-build  actions.c  actions.h  images.c  images.h  lang.c  lang.h  lock_logos.c  lock_logos.h  screens.c  screens.h  styles.c  styles.h  ui.c  vars.c  vars.h
